--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.506736921594!2d75.39833671503712!3d31.37258826156364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391a48e3599b1ae7%3A0x635ffc3ebf72dd53!2sBawa-Lalvani%20Public%20School!5e0!3m2!1sen!2sin!4v1621168271295!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
-    <div class="enquiry">
+    <div id="enquiry">
    <h1>Enquiry Form</h1>
         <h2>Message</h2>
         <input type="text">
